@@ -24,8 +24,6 @@ import org.pmw.tinylog.Logger;
 
 public class JUnitBridgeTest {
 
-    final String ROOT_DIR = "."+ File.separator +"tmp";
-
     CacheClassLoader classLoader;
 
     Object junitBridge;
@@ -37,7 +35,7 @@ public class JUnitBridgeTest {
     public void setUp() throws Exception {
         classLoader = new CacheClassLoader(TestConfiguration.EXAMPLE_DIR_NAME);
         Class<?> bridgeClass = classLoader.loadClass(JUnitBridge.class.getName());
-        junitBridge = bridgeClass.newInstance();
+        junitBridge = bridgeClass.getDeclaredConstructor().newInstance();
         runnerMethod = junitBridge.getClass().getMethod(JUnitBridge.BRIDGE_METHOD_NAME, UnitTest.class, int.class);
         buildExampleClasses();
     }
@@ -206,7 +204,7 @@ public class JUnitBridgeTest {
     @Test
     public void incorrectMethodName() throws Exception {
 
-        UnitTest test = new UnitTest("ErrorTest", "testFaultyTes");
+        UnitTest test = new UnitTest("ErrorTest", "thisTestDoesNotExist");
 
         Object resultObj = null;
         try {
@@ -220,13 +218,13 @@ public class JUnitBridgeTest {
         UnitTestResult result = (UnitTestResult) resultObj;
 
         assertFalse(result.getPassed());
-        assertEquals("org.junit.platform.commons.JUnitException", result.getExceptionType());
+        assertEquals("java.lang.NoSuchMethodException", result.getExceptionType());
     }
 
     @Test
     public void incorrectClassName() throws Exception {
 
-        UnitTest test = new UnitTest("ErrorTes", "testFaultyTest");
+        UnitTest test = new UnitTest("ThisClassDoesNotExist", "testFaultyTest");
 
         Object resultObj = null;
         try {
